feat: get roles endpoint added
